--- a/render.yaml
+++ b/render.yaml
@@ -1,44 +1,36 @@
-{\rtf1\ansi\ansicpg1252\cocoartf2822
-\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
-{\colortbl;\red255\green255\blue255;}
-{\*\expandedcolortbl;;}
-\paperw11900\paperh16840\margl1440\margr1440\vieww11520\viewh8400\viewkind0
-\pard\tx566\tx1133\tx1700\tx2267\tx2834\tx3401\tx3968\tx4535\tx5102\tx5669\tx6236\tx6803\pardirnatural\partightenfactor0
-
-\f0\fs24 \cf0 services:\
-  - type: web\
-    name: walton-holidays\
-    env: python\
-    buildCommand: pip install -r requirements.txt\
-    startCommand: gunicorn app:app\
-    plan: free\
-    envVars:\
-      - key: FLASK_ENV\
-        value: production\
-      - key: SECRET_KEY\
-        generateValue: true\
-      - key: BASE_URL\
-        sync: false   # \'e0 remplir apr\'e8s d\'e9ploiement: https://ton-service.onrender.com\
-      - key: SMTP_HOST\
-        value: smtp.gmail.com\
-      - key: SMTP_PORT\
-        value: "587"\
-      - key: SMTP_USER\
-        value: mw@walton.fr\
-      - key: SMTP_PASSWORD\
-        sync: false   # ton mot de passe d\'92application Gmail\
-      - key: MAIL_FROM\
-        value: "Walton Vacances <mw@walton.fr>"\
-      - key: EMAIL_MARK\
-        value: mw@walton.fr\
-      - key: EMAIL_NHAN\
-        value: nhan@walton.fr\
-      - key: EMAIL_ANH\
-        value: anh@walton.fr\
-      - key: ALWAYS_CC\
-        value: mw@walton.fr\
-      - key: SPREADSHEET_ID\
-        sync: false   # ID du Google Sheet\
-      - key: GOOGLE_SERVICE_ACCOUNT_JSON\
-        sync: false   # Colle ici le contenu JSON du compte de service Google\
-}
+services:
+  - type: web
+    name: walton-holidays
+    env: python
+    buildCommand: pip install -r requirements.txt
+    startCommand: gunicorn app:app
+    plan: free
+    envVars:
+      - key: FLASK_ENV
+        value: production
+      - key: SECRET_KEY
+        generateValue: true
+      - key: BASE_URL
+        sync: false   # à remplir après déploiement: https://ton-service.onrender.com
+      - key: SMTP_HOST
+        value: smtp.gmail.com
+      - key: SMTP_PORT
+        value: "587"
+      - key: SMTP_USER
+        value: mw@walton.fr
+      - key: SMTP_PASSWORD
+        sync: false   # mot de passe d’application Gmail
+      - key: MAIL_FROM
+        value: "Walton Vacances <mw@walton.fr>"
+      - key: EMAIL_MARK
+        value: mw@walton.fr
+      - key: EMAIL_NHAN
+        value: nhan@walton.fr
+      - key: EMAIL_ANH
+        value: anh@walton.fr
+      - key: ALWAYS_CC
+        value: mw@walton.fr
+      - key: SPREADSHEET_ID
+        sync: false   # ID du Google Sheet
+      - key: GOOGLE_SERVICE_ACCOUNT_JSON
+        sync: false   # colle ici le JSON complet du service account
